opam-version: "2.0"
maintainer: "Nathan Rebours <nathan.p.rebours@gmail.com>"
author: "Nathan Rebours <nathan.p.rebours@gmail.com>"
homepage: "https://github.com/cryptosense/ppx_factory"
bug-reports: "https://github.com/cryptosense/ppx_factory/issues"
license: "BSD-2"
dev-repo: "git+https://github.com/cryptosense/ppx_factory.git"
doc: "https://cryptosense.github.io/ppx_factory/doc"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
depends: [
  "dune" {build}
  "ocaml" {>= "4.04.2"}
  "ounit" {with-test & >= "2.0.0"}
  "ppxlib" {>= "0.3.0"}
]
tags: ["org:cryptosense"]
synopsis: "PPX to derive factories and default values"
