(executable
  (name pp)
  (modules pp)
  (libraries
    ppx_factory
    ppxlib
  )
)

(rule
  (targets pp.actual)
  (deps test.ml)
  (action (run ./pp.exe -deriving-keep-w32 both --impl %{deps} -o %{targets}))
)

(alias
  (name runtest)
  (action (diff pp.expected pp.actual))
)

(test
  (name test)
  (modules test)
  (preprocess
    (pps
      ppx_factory
    )
  )
)
